# aqda

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
aqda/: __init__.py  __main__.py  app.py  db.py
aqda/frontend/: index.html  package-lock.json  package.json  vite.config.ts
aqda/frontend/src/: App.tsx  api.ts  index.css
aqda/frontend/src/components/: AiPanel.tsx  CodeTree.tsx  DocumentViewer.tsx  ErrorBoundary.tsx  MemoPanel.tsx  SegmentsBrowser.tsx
aqda/frontend/src/pages/: ProjectList.tsx  ProjectView.tsx  SettingsPage.tsx
aqda/routers/: ai.py  codes.py  codings.py  documents.py  export.py  memos.py  projects.py  settings.py
