[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqda"
version = "0.1.1"
description = "AQDA — Augmented Qualitative Data Analysis. Local-first QDA with AI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
    "pdfplumber>=0.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
audio = ["faster-whisper>=1.0"]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aqda = "aqda.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqda*"]

[tool.setuptools.package-data]
aqda = ["frontend/dist/**/*"]

[tool.ruff]
line-length = 100
